--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://dennisskinner.com
+# baseURL: https://dennisskinner.com
 languageCode: en-us
 title: "Professional Nerd Herder: Dennis Skinner"
 theme: mini
@@ -12,7 +12,7 @@ permalinks:
 
 paginate: 3
 
-#enableGitInfo: true
+enableGitInfo: true
 
 #googleAnalytics: your-google-analytics-id
 #disqusShortname: your-disqus-shortname
